# blaseball.vcr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Vcr.toml  app-image.yml  asset_replaces.toml  build.bash  build_stream_data.bash  encode_dictless.bash  encode_vhs.bash  train_dicts.bash  type_tool.py
.github/workflows/: build.yml
build-tools/: Pipfile  build.py  config.kdl  download_indexes.py  game_schema.py  games.schema.json  games.schema.rs
build-tools/tools/: dict.py  record.py  types.py
configs/: Vcr-AppImage.toml
encoder/: Cargo.toml  Pipfile  download_indexes.py  ids_index.json
encoder/src/: build_entities.rs  build_games.rs  download_site_data.rs  feed.rs  feed_stats.rs  lib.rs  train_dict.rs  train_feed_dict.rs  tributes.rs
new-encoder/: Cargo.toml
new-encoder/src/: lib.rs
player/: Cargo.toml
player/src/: fairings.rs  gui.rs  lib.rs  main.rs  paging.rs  server.rs  video.html
player/src/api/: feed.rs  mod.rs  v1.rs  v2.rs
player/src/feed/: api.rs
player/src/site/: api.rs
player/src/types/: fairings.rs  mod.rs  requests.rs
player/src/v1/: api.rs  mod.rs  types.rs
player/src/v2/: api.rs  types.rs
site-assets/: downloader.py  files.json
src/: db.rs  decode.rs  encode.rs  err.rs  lib.rs  main.rs  server.rs
src/builder/: build_entities.rs  build_games.rs  download_site_data.rs
src/feed/: event.rs
src/json_sequences/: db.rs  encode.rs  encoder.rs  mod.rs
src/site/: chron.rs  delta.rs  manager.rs  mod.rs
vcr-lib/: Cargo.toml
vcr-lib/benches/: stream_data.rs
vcr-lib/src/: chron_types.rs  db_manager.rs  err.rs  lib.rs  main.rs  site.rs  stream_data.rs  utils.rs
vcr-lib/src/feed/: block.rs  db.rs  event.rs  header.rs  index.rs  mod.rs  recorder.rs
vcr-lib/src/vhs/: db.rs  mod.rs  recorder.rs
vcr-lib/src/vhs/tributes/: command.rs  mod.rs  recorder.rs  ser.rs
vcr-lookups/: Cargo.toml
vcr-lookups/src/: lib.rs  uuid_shell.rs
vcr-lookups/src/lookups/: games.idmap  mod.rs  players.idmap  teams.idmap
vcr-lookups/src/lookups/games/: dates.index  pitchers.index  teams.index  weather.index
vcr-schemas/: Cargo.toml
vcr-schemas/src/: lib.rs
vcr-schemas/src/schemas/: attributes.rs  availablechampionbets.rs  bonusresult.rs  championcallout.rs  dayssincelastincineration.rs  eventresult.rs  game.rs  gammabracket.rs  giftprogress.rs  idols.rs  item.rs  league.rs  mod.rs  nullified.rs  peanutpower.rs  player.rs  playoffmatchup.rs  playoffround.rs  playoffs.rs  risingstars.rs  seasonstatsheet.rs  shopsetup.rs  sim.rs  standings.rs  stream_data.rs  subleague.rs  team.rs  teamelectionstats.rs  teamstatsheet.rs  temporal.rs  thebook.rs  tournament.rs  tributes.rs
vcr_lib/: Cargo.toml
vcr_lib/benches/: stream_data.rs
vcr_lib/src/: chron_types.rs  db_manager.rs  err.rs  game_lookup_tables.rs  lib.rs  main.rs  site.rs  stream_data.rs  utils.rs  uuid_shell.rs
vcr_lib/src/feed/: block.rs  db.rs  decode.rs  desc.rs  event.rs  index.rs  metadata.rs  mod.rs  recorder.rs
vcr_lib/src/json_sequences/: db.rs  encoder.rs  header.rs  mod.rs  tributes.rs
vcr_lib/src/lookups/: mod.rs  players.idmap
vcr_lib/src/lookups/games/: dates.index  weather.index
vcr_lib/src/site/: chron.rs  manager.rs  mod.rs
vcr_lib/src/vhs/: db.rs  mod.rs  recorder.rs
vcr_lib/src/vhs/schemas/: availablechampionbets.rs  bonusresult.rs  bossfight.rs  communitychestprogress.rs  decreeresult.rs  division.rs  eventresult.rs  fanart.rs  feedseasonlist.rs  fuelprogress.rs  game.rs  gamestatsheet.rs  gammaelection.rs  gammaelectiondetails.rs  gammaelectionresults.rs  gammaelections.rs  gammasim.rs  globalevents.rs  glossarywords.rs  idols.rs  item.rs  league.rs  librarystory.rs  mod.rs  nullified.rs  offseasonrecap.rs  offseasonsetup.rs  player.rs  playerstatsheet.rs  playoffmatchup.rs  playoffround.rs  playoffs.rs  renovationprogress.rs  season.rs  shopsetup.rs  sim.rs  sponsordata.rs  stadium.rs  stadiumprefabs.rs  standings.rs  (+10 more)
voyager_data/zstd-dictionaries/: game_updates.dict  librarystory.dict  tributes.dict
zstd-dictionaries/: feed.dict  game_updates.dict  sim.dict  stadium.dict
