[package]
name = "blaseball_vcr"
version = "0.1.0"
edition = "2018"

[dependencies]
json-patch = "0.2.6"
serde_json = "1.0.64"
chrono = "0.4"
rmp-serde = "0.15.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[[bin]]
name = "encode"
path = "src/encode.rs"

[[bin]]
name = "server"
path = "src/server.rs"
