[package]
name = "blaseball_vcr"
version = "0.1.0"
edition = "2018"

[dependencies]
json-patch = "0.2.6"
serde_json = "1.0.64"
rmp-serde = "0.15.5"
xdelta3 = "0.1.5"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking","json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[[bin]]
name = "encode"
path = "src/json_sequences/encode.rs"

[[bin]]
name = "server"
path = "src/server.rs"
