[package]
name = "encoder"
version = "0.1.0"
edition = "2018"

[dependencies]
json-patch = "0.2.6"
serde_json = "1.0.64"
rmp-serde = "0.15.5"
zstd = "0.9"
crossbeam = "0.8.1"
toml = "0.5.8"
integer-encoding = "3.0.2"
clap = "3.0.0-beta.4"
indicatif = "0.17.0-beta.1"
anyhow = "1"

[dependencies.blaseball_vcr]
path = "../vcr_lib"

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]


[dependencies.tokio]
version = "1"
features = ["macros"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking","json","gzip","deflate"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.xdelta3]
git = "https://github.com/alisww/xdelta3-rs.git"

[[bin]]
name = "build_entities"
path = "src/build_entities.rs"

[[bin]]
name = "build_games"
path = "src/build_games.rs"

[[bin]]
name = "download_site_data"
path = "src/download_site_data.rs"

[[bin]]
name = "encode_feed"
path = "src/feed.rs"

[[bin]]
name = "train_dict"
path = "src/train_dict.rs"

[[bin]]
name = "train_feed_dict"
path = "src/train_feed_dict.rs"

[[bin]]
name = "tributes"
path = "src/tributes.rs"