[package]
name = "new-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
zstd = { version = "0.11", features = ["experimental", "zdict_builder"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
anyhow = "1"
uuid = "0.8.2"
memmap2 = "0.5.3"
blaseball_vcr = { path = "../vcr_lib" }
indicatif = "0.17.0-beta.1"
integer-encoding = "3.0.2"
clap = "2.33.3"
tempfile = "3.3.0"
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
phf_codegen = "0.10.0"
itertools = "0.10"
fst = "0.4.7"
rmp-serde = "1"
easybench = "1.1.0"
fastrand = "1.7.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "blocking", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["macros"]
