[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.0"
moka = "0.8.0"
erased-serde = "0.3.20"
atomic-shim = "0.2.0"
hex = "0.4.3"
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["uuid", "json"]

[dependencies.blaseball_vcr]
path = "../vcr_lib"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"

