[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.0"
moka = "0.8.2"
erased-serde = "0.3.20"
atomic-shim = "0.2.0"
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
humantime-serde = "1.1.1"
vcr-schemas = { path = "../vcr-schemas" }
vcr-lookups = { path = "../vcr-lookups" }
iso8601-timestamp = "0.2.11"

[features]
bundle_before = ["before"]

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dependencies.uuid]
version = "1.0"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["uuid", "json"]

[dependencies.blaseball_vcr]
path = "../vcr-lib"
features = ["rocket"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"

[dependencies.before]
git = "https://github.com/emily-signet/before.git"
branch = "main"
optional = true
default-features = false
