[package]
name = "vcr-lookups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "1.0.0"
perfect-map = { git = "https://github.com/emily-signet/perfect-map.git", version = "0.1.0" }
#perfect-map = { path = "../perfect-map" }
static_init = "1.0.3"
modular-bitfield = "0.11.2"

[dependencies.uuid]
version = "1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]


