[package]
name = "vcr-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0.8"
serde = { version = "1.0.164", features = ["derive"] }
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
vcr-lookups = { path = "../vcr-lookups" }
serde_json = "1.0.97"
uuid = { version = "1.3.4", features = ["serde"] }
smallvec = "1.10.0"
