[package]
name = "blaseball_vcr"
version = "0.1.0"
edition = "2018"

[dependencies]
json-patch = "0.2.6"
rmp-serde = "0.15.5"
zstd = "0.9"
lru = "0.6.6"
sha2 = "0.9.8"
thiserror = "1.0"
integer-encoding = "3.0.2"
memmap2 = "0.5.0"
moka = "0.6.1"

[dependencies.reqwest]
version = "0.11.4"
default-features = false

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"
features = ["preserve_order", "raw_value"]

[dependencies.xdelta3]
git = "https://github.com/alisww/xdelta3-rs.git"
