[package]
name = "blaseball_vcr"
version = "0.1.0"
edition = "2021"

[dependencies]
json-patch = "0.2.6"
rmp-serde = "0.15.5"
lru = "0.6.6"
sha2 = "0.9.8"
thiserror = "1.0"
integer-encoding = "3.0.2"
memmap2 = "0.5.0"
moka = "0.6.1"
anyhow = "1.0"
rayon = "1.5.1"
bsdiff = "0.1.6"
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
easybench = "1.1.0"
crossbeam = "0.8"
automod = "1"
num_cpus = "1.13.1"
type-map = "0.5.0"
tempfile = "3.3.0"
phf = "0.10.1"

[dependencies.rkyv]
version = "0.7.36"
default-features = false
features = ["archive_le", "size_16", "std", "uuid", "uuid_std"]

[dependencies.zstd]
version = "0.11"
features = ["experimental", "zdict_builder"]

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"
features = ["preserve_order", "raw_value"]


