[package]
name = "blaseball_vcr"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde = "1"
thiserror = "1.0"
memmap2 = "0.5.0"
anyhow = "1.0"
bsdiff = "0.1.6"
vhs-diff = { git = "https://github.com/emily-signet/vhs-diff.git" }
crossbeam = "0.8"
automod = "1"
num_cpus = "1.13.1"
type-map = "0.5.0"
tempfile = "3.3.0"
phf = "0.10.1"
enum-map = "2.1.0"
fst = "0.4.7"
compiled-uuid = "0.1.2"
moka = "0.8.2"
hex = "0.4.3"
sha2 = "0.10.2"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dependencies.rkyv]
version = "0.7.36"
default-features = false
features = ["archive_le", "size_16", "std", "uuid", "uuid_std", "strict"]

[dependencies.zstd]
version = "0.11"
features = ["experimental", "zdict_builder"]

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.uuid]
version = "0.8.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"
features = ["preserve_order", "raw_value"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "stream_data"
harness = false

